--- a/server/templates/fun_pics.html
+++ b/server/templates/fun_pics.html
@@ -20,7 +20,7 @@
 
 <p style="text-align: center">http://www.tristara.com/fun_pics?channel={{channel}}</p>
 
-<p>For more details, see blog post <a href="">fdsdfdfdf</a>.
+<p>For more details, see <a href="blog/2011/fun-with-reddit-image-posts/">Fun with Reddit Image Posts</a>.
 </div>    
 
 <div style="padding: 10px; border: 1px solid white; outline: 1px solid gainsboro; background-color: #eaeaea;">
@@ -32,9 +32,8 @@
     
 </div>
 
-<div style="float:right; text-align: right">
-
-    <div><button id="reddit_next" style="background-color:#333; color:#FFFFFF;"><span style="font-size: 24px;">NEXT</span></button></div>
+<div style="float:right; text-align: right; padding-top: 5px;">
+    <div style="margin-bottom: 10px;"><a href="javascript:void(0)" class="btn" id="reddit_next">NEXT</a></div>
     <div><input type="checkbox" name="nsfw" value="1" onclick="fun_pics.toggleNsfw(this)"/> NSFW</div>
     <div id ="reddit_num_results"></div>
     
