--- a/server/templates/projects.html
+++ b/server/templates/projects.html
@@ -16,7 +16,7 @@ Here's a small sampling of some things I've done:
   </div>
   
   <div id="project_text">
-    <p><span>Video Wall</span>
+    <p><span><a href="video_wall">Video Wall</a></span>
     <p>I created a special video player that blasts a continuous stream of random moments of videos at you.
     <p>For this demo, I loaded up the player with YouTube's top 1000 videos of all time.
     <p><a href="video_wall"><img src="images/more.png" class="more" width="68" height="24" alt="more" /></a>
@@ -27,14 +27,14 @@ Here's a small sampling of some things I've done:
 <div id="project">
 
   <div id="project_img">
-    <img src="images/almost_there.png">
+    <a href="almost_there"><img src="images/almost_there.png"></a>
   </div>
   
   <div id="project_text">
-    <p><span>I'm Almost There</span>
+    <p><span><a href="almost_there">I'm Almost There</a></span>
     <p>Lucas Ryan and I wrote this iPhone app last year.
     <p>The app sends a text message that links to a web page showing people where you are on a map.
-    <p><a href="page.html"><img src="images/more.png" class="more" width="68" height="24" alt="more" /></a>
+    <p><a href="almost_there"><img src="images/more.png" class="more" width="68" height="24" alt="more" /></a>
   </div>
 
 </div>
@@ -42,14 +42,14 @@ Here's a small sampling of some things I've done:
 <div id="project">
 
   <div id="project_img">
-    <img src="images/reddit-alien.jpg" style="border:1px solid #dcdcdc;">
+    <a href="fun_pics"><img src="images/reddit-alien.jpg" style="border:1px solid #dcdcdc;"></a>
   </div>
   
   <div id="project_text">
-    <p><span>Reddit Image Viewer</span>
+    <p><span><a href="fun_pics">Reddit Image Viewer</a></span>
     <p>Reddit gets thousands of images posted every day.
     <p>This app lets you  view pictures these pictures in a way that's fun, easy, and social.
-    <p><a href="page.html"><img src="images/more.png" class="more" width="68" height="24" alt="more" /></a>
+    <p><a href="fun_pics"><img src="images/more.png" class="more" width="68" height="24" alt="more" /></a>
   </div>
 
 </div>
