--- a/server/templates/work.html
+++ b/server/templates/work.html
@@ -3,14 +3,14 @@
 {% block content %}    
 <div id="left_content" style="clear:both"><!-- content -->
 
-<h1>Work</h1> 
+<h1>Collaborate</h1> 
 
 <p>
-Creating a startup is an exhilarating experience.  I know, I've done it, and I've made almost every mistake in the process.  
+Creating a startup is an exhilarating experience.  I know. I've done it, and I've made almost every mistake in the process.  
 But I got enough things right to bootstrap a new business (HitPlay) and grow it organically to over $20 million in annual revenue.
 
 <p>
-If you're passionate about an idea and willing to knock down any obstacle to make your vision a reality, then I will want you to succeed.  
+I enjoy helping people who are passionate about an idea and willing to knock down any obstacle to make their vision a reality.
 I can help with sweat, money, and experience.
 
 <p>To elaborate:</p>
@@ -40,7 +40,7 @@ I can help with sweat, money, and experience.
 </ul>
 
 
-<p></p>So if you're looking for help in any of these areas, please <a href="contact">be in touch</a>.
+<p></p>So if you're looking for help in any of these areas, please <a href="contact">get in touch</a>.
                   
 </div><!-- end content -->
 
