--- a/server/templates/about.html
+++ b/server/templates/about.html
@@ -6,14 +6,19 @@
 
 <h1>About</h1> <p></p> On the biographical front: 
 
-<ul class="normal_list"> <li>Born in Hong Kong.</li> <li>Parents were in 
-the foreign service, so I lived in Senegal, Egypt, and Bolivia while 
-growing up.</li> <li>Started programming when I was 10 on my dad's super 
-modern IBM XT (which had a hard drive capable of storing an astounding 
-10 million bytes!)</li> <li>Studied Computer Science at Harvard.</li> 
+<ul class="normal_list"> 
+<li>Born in Hong Kong.</li> 
+<li>Parents were in the Foreign Service, so I've lived in Senegal, Egypt, and Bolivia while 
+growing up.</li> 
+<li>Started programming when I was 10 on my dad's super-modern IBM XT (which had a hard drive capable of storing an astounding 
+10 million bytes!)</li> 
+<li>Studied Computer Science at Harvard.</li> 
 <li>Worked at Industrial Light & Magic, SEVEN, and started HitPlay.</li> 
-<li>Focused on investing / consulting / advising for the past couple 
-years.</li> </ul> <p> </p> 
+<li>Focused on investing/consulting/advising for the past couple 
+years.</li> 
+</ul> 
+
+<p> </p> 
 
 <p>I'm actually not interested in technology, but rather what you can do 
 with technology. Unlike most developers, I don't care about IDEs, or git 
@@ -23,7 +28,7 @@ vs. svn, or python vs. ruby. They're all just tools.
 tools. 
 
 <p>For the first time in history, every person on this planet can be 
-instantly connected with any body or any group. For the first time in 
+instantly connected with anybody or any group. For the first time in 
 history, storage and distribution of content is essentially free and 
 infinite. 
 
@@ -33,11 +38,11 @@ of the world are unleashed?
 
 <p>On a related note, I think a lot about positive psychology, about 
 what makes us happy, engages our talents, and provides a sense of 
-fulfillment.
+fulfillment. 
 
-<p>I'm always surprised at how otherwise intelligent people are often unhappy.  It <em>is</em> possible to use one's intellect in service of becomming happier -- it's a mystery to me why so few do.
+<p>I'm always surprised at how otherwise intelligent people are often unhappy.  It <em>is</em> possible to use one's intellect in service of becoming happier &mdash; it's a mystery to me why so few do.
 
-<p>So I'm <em>especially</em> attracted to ideas with the potential to touch a wide swathe of humanity, and elevate their sense of well being.
+<p>So, I'm <em>especially</em> attracted to ideas with the potential to touch a wide swathe of humanity and elevate their sense of well-being.
 
 </div><!-- end content --> 
 
