--- a/web/css/style.css
+++ b/web/css/style.css
@@ -64,7 +64,7 @@ body {width: 960px; margin: auto; font-family: Georgia, "Times New Roman", Times
 }
 
 #logo-img {float: left; margin-top: 0px; margin-left: 0px}
-#logo-text {float: left; margin-top: 41px;}
+#logo-text {float: left; margin-top: 41px; font-style: italic;}
 
 #main_content {
 	margin-top: 44px;
@@ -108,6 +108,7 @@ body {width: 960px; margin: auto; font-family: Georgia, "Times New Roman", Times
     margin-left: 30px; 
     margin-top: 10px;
 }
+
 
 /* sidebar menu */
 
@@ -282,3 +283,26 @@ ul.dropdown ul li a					{ border-right: none; background: none; padding: 9px 8px
 ul.dropdown ul ul 					{ left: 100%; top: 0; z-index:300; border-top: 1px solid #dbdbdb }
 ul.dropdown li:hover > ul 			{ visibility: visible; }
 
+/* buttons */
+a.btn {
+  width: 250px;
+  padding: 5px 10px 5px 10px;
+  font-family: Arial;
+  font-size: 24px;
+  text-decoration: none;
+  color: #ffffff;
+  text-shadow: -1px -1px 2px #618926;
+  background: -moz-linear-gradient(#98ba40, #a6c250 35%, #618926);
+  background: -webkit-gradient(linear,left top,left bottom,color-stop(0, #98ba40),color-stop(.35, #a6c250),color-stop(1, #618926));
+  border: 1px solid #618926;
+  border-radius: 10px;
+  -moz-border-radius: 20px;
+  -webkit-border-radius: 10px;
+}
+
+a.btn:hover {
+  text-shadow: -1px -1px 2px #465f97;
+  background: -moz-linear-gradient(#245192, #1e3b73 75%, #12295d);
+  background: -webkit-gradient(linear,left top,left bottom,color-stop(0, #245192),color-stop(.75, #1e3b73),color-stop(1, #12295d));
+  border: 1px solid #0f2557;
+}
