fixes for IE and Firefox

--- a/server/templates/fun_pics.html
+++ b/server/templates/fun_pics.html
@@ -23,7 +23,7 @@
 <p>For more details, see <a href="blog/2011/fun-with-reddit-image-posts/">Fun with Reddit Image Posts</a>.
 </div>    
 
-<div style="padding: 10px; border: 1px solid white; outline: 1px solid gainsboro; background-color: #eaeaea;">
+<div class="tan_box">
 
 <div style="clear:both; float: left;">
 
@@ -45,6 +45,10 @@
 </div>
 
 </div>
+
+<!-- add lots of vertical space so NEXT button stay in one place as new photos cycle in -->
+<div style="padding-top: 1000px;"></div>
+
 
 {% endblock %}
 
