--- a/server/templates/sidebar.html
+++ b/server/templates/sidebar.html
@@ -1,7 +1,17 @@
 
 <div id="sidebar"><!-- sidebar -->
 
-	<h3>
+				<h3>About Me</h3>
+					<div style="float:left; margin-bottom: 25px; margin-right: 20px;"><img src="http://www.tristara.com/images/josh-100x150.png" width=100></div>
+					<div style="line-height: 1.4em;">
+						<p>My name is Joshua Seims, and this is my site.
+						<p>I'm a hacker, entrepreneur, angel investor.
+                        
+<a href="https://twitter.com/jseims" class="twitter-follow-button" data-show-count="false" data-lang="en">Follow @jseims</a>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>                        
+					</div>
+
+    <h3>
 	Recent Posts 
 		<!-- AddToAny BEGIN -->
 		<a class="a2a_dd" href="http://www.addtoany.com/subscribe?linkurl=http%3A%2F%2Fwww.tristara.com%2Fblog%2F%3Ffeed%3Drss2&amp;linkname="><img src="http://static.addtoany.com/buttons/subscribe_106_16.gif" width="106" height="16" border="0" alt="Subscribe"/></a>
