--- a/server/templates/base.html
+++ b/server/templates/base.html
@@ -3,9 +3,9 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <link rel="stylesheet" type="text/css" href="css/style.css" media="all" />
-	<!--[if IE 7]>
+<!--[if IE]>
 	<link rel="stylesheet" type="text/css" href="css/style-ie.css" />
-	<![endif]-->
+<![endif]-->
 <title>
     {% block title %}Tristara -- Joshua Seims's Personal Site{% endblock %}
 </title>
@@ -33,10 +33,22 @@ $("ul.dropdown li ul li:has(ul)").find("a:first").append(" &raquo; ");
 <meta property="og:site_name" content="Tristara" />
 <meta property="fb:app_id" content="111528055628412" />
 {% block facebook_header %}{% endblock %}
+
+<script type="text/javascript">
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-27612891-1']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+</script>
+
 </head>
 
 <body>
-
 {% block facebook_body %}{% endblock %}
 
 <div id="header">
@@ -51,7 +63,7 @@ $("ul.dropdown li ul li:has(ul)").find("a:first").append(" &raquo; ");
 <li><a href="projects">Projects</a>
 <ul class="sub_menu">
     <li><a href="video_wall">Video Wall</a>
-    <li><a href="almost_there">I'm Almost There</a></li>
+    <li><a href="blog/2011/i-am-almost-there/">I'm Almost There</a></li>
     <li><a href="fun_pics">Reddit Image Viewer</a></li>
 </ul>
 </li>
