--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -28,7 +28,7 @@ Here's a small sampling of some things I've done:
 
 <ul class="normal_list">
     <li><a href="video_wall">Video Wall</a>.  Get YouTube's top 1000 videos of all time blasted into your eyeballs.</li>
-    <li><a href="almost_there">I'm Almost There</a>.  An iPhone app that shows people where you are on a map as you're running late (or, conversely, get them to show you where they are as you're waiting for them).</li>
+    <li><a href="blog/2011/i-am-almost-there/">I'm Almost There</a>.  An iPhone app that shows people where you are on a map as you're running late (or, conversely, get them to show you where they are as you're waiting for them).</li>
     <li><a href="fun_pics">Reddit Image Viewer</a>.  Easily view pictures added to Reddit as a nearly infinite stream.  Also, share this stream with your friends.</li>
 </ul>    
 </p>
