--- a/server/templates/projects.html
+++ b/server/templates/projects.html
@@ -27,14 +27,14 @@ Here's a small sampling of some things I've done:
 <div id="project">
 
   <div id="project_img">
-    <a href="almost_there"><img src="images/almost_there.png"></a>
+    <a href="blog/2011/i-am-almost-there/"><img src="images/almost_there.png"></a>
   </div>
   
   <div id="project_text">
-    <p><span><a href="almost_there">I'm Almost There</a></span>
+    <p><span><a href="blog/2011/i-am-almost-there/">I'm Almost There</a></span>
     <p>Lucas Ryan and I wrote this iPhone app last year.
     <p>The app sends a text message that links to a web page showing people where you are on a map.
-    <p><a href="almost_there"><img src="images/more.png" class="more" width="68" height="24" alt="more" /></a>
+    <p><a href="blog/2011/i-am-almost-there/"><img src="images/more.png" class="more" width="68" height="24" alt="more" /></a>
   </div>
 
 </div>
