cron job for indexing solr and style tweaks to fun_pics

--- a/server/templates/fun_pics.html
+++ b/server/templates/fun_pics.html
@@ -41,7 +41,7 @@
 <div style="text-align:center; clear:both; padding-bottom: 40px;">  
     <div id="reddit_title" style="font-size: 24px; margin-bottom: 10px;"></div>
     <a href="" id="reddit_img_target"><img src="" id="reddit_img"></a>
-
+    
     <div style="margin-top: 20px;">
         <div style="float:left; margin-left: 370px;">
             Tweet this photo
@@ -59,6 +59,11 @@
 <!-- add lots of vertical space so NEXT button stay in one place as new photos cycle in -->
 <div style="padding-top: 1000px;"></div>
 
-
+<div id="reddit_loading">
+    <img src="/images/loader.gif" alt="loading...">
+    <div>
+        <em>Loading image</em>
+    </div>
+</div>
 {% endblock %}
 
