ready to launch

--- a/server/templates/base.html
+++ b/server/templates/base.html
@@ -63,7 +63,7 @@ $("ul.dropdown li ul li:has(ul)").find("a:first").append(" &raquo; ");
 <li><a href="projects">Projects</a>
 <ul class="sub_menu">
     <li><a href="video_wall">Video Wall</a>
-    <li><a href="blog/2011/i-am-almost-there/">I'm Almost There</a></li>
+    <li><a href="/blog/im-almost-there/">I'm Almost There</a></li>
     <li><a href="fun_pics">Reddit Image Viewer</a></li>
 </ul>
 </li>
@@ -83,7 +83,7 @@ $("ul.dropdown li ul li:has(ul)").find("a:first").append(" &raquo; ");
 </div>
 	  
 <div id="footer">
- &copy; Copyright 2011 Joshua Seims 
+ &copy; Copyright 2011 Joshua Seims / <a href="/blog/dmca">DMCA</a>
 </div>
 
 {% block js_body %}{% endblock %}
