--- a/server/templates/projects.html
+++ b/server/templates/projects.html
@@ -1,5 +1,9 @@
 {% extends "base.html" %}
 
+{% block title %}
+Projects
+{% endblock %}
+
 {% block content %}    
 <div id="left_content" style="clear:both"><!-- content -->
 
@@ -27,14 +31,14 @@ Here's a small sampling of some things I've done:
 <div id="project">
 
   <div id="project_img">
-    <a href="blog/2011/i-am-almost-there/"><img src="images/almost_there.png"></a>
+    <a href="/blog/im-almost-there/"><img src="images/almost_there.png"></a>
   </div>
   
   <div id="project_text">
-    <p><span><a href="blog/2011/i-am-almost-there/">I'm Almost There</a></span>
+    <p><span><a href="/blog/im-almost-there/">I'm Almost There</a></span>
     <p>Lucas Ryan and I wrote this iPhone app last year.
     <p>The app sends a text message that links to a web page showing people where you are on a map.
-    <p><a href="blog/2011/i-am-almost-there/"><img src="images/more.png" class="more" width="68" height="24" alt="more" /></a>
+    <p><a href="/blog/im-almost-there/"><img src="images/more.png" class="more" width="68" height="24" alt="more" /></a>
   </div>
 
 </div>
