--- a/server/templates/video_wall.html
+++ b/server/templates/video_wall.html
@@ -1,5 +1,9 @@
 {% extends "base.html" %}
 
+{% block title %}
+Video Wall
+{% endblock %}
+
 {% block js_includes %}
 <script>
 var clickedOnVideo = function(title, id) {
