--- a/server/templates/work.html
+++ b/server/templates/work.html
@@ -1,5 +1,9 @@
 {% extends "base.html" %}
 
+{% block title %}
+Collaborate
+{% endblock %}
+
 {% block content %}    
 <div id="left_content" style="clear:both"><!-- content -->
 
@@ -7,7 +11,7 @@
 
 <p>
 Creating a startup is an exhilarating experience.  I know. I've done it, and I've made almost every mistake in the process.  
-But I got enough things right to bootstrap a new business (HitPlay) and grow it organically to over $20 million in annual revenue.
+But I got enough right to bootstrap a new business (HitPlay) and grow it organically to over $20 million in annual revenue.
 
 <p>
 I enjoy helping people who are passionate about an idea and willing to knock down any obstacle to make their vision a reality.
