--- a/server/templates/about.html
+++ b/server/templates/about.html
@@ -1,5 +1,9 @@
 {% extends "base.html" %} 
 
+{% block title %}
+About
+{% endblock %}
+
 {% block content %} 
 
 <div id="left_content" style="clear:both"><!-- content --> 
