--- a/server/templates/fun_pics.html
+++ b/server/templates/fun_pics.html
@@ -1,5 +1,9 @@
 {% extends "base.html" %}
 
+{% block title %}
+Reddit Image Viewer
+{% endblock %}
+
 {% block js_includes %}
 <script src="/js/fun_pics.js"></script>
 {% endblock %}
@@ -19,7 +23,7 @@
 
 <p style="text-align: center">http://www.tristara.com/fun_pics?channel={{channel}}</p>
 
-<p>For more details, see <a href="blog/2011/fun-with-reddit-image-posts/">Fun with Reddit Image Posts</a>.
+<p>For more details, see <a href="blog/2011/fun-with-reddit-image-posts/">Fun with Reddit Image Data</a>.
 </div>    
 
 <div class="tan_box">
