fixed ipad layout issues

--- a/server/templates/contact.html
+++ b/server/templates/contact.html
@@ -9,7 +9,7 @@ Contact
 
 <h1>Contact</h1> 
 
-<p>Email: josh at tristara.com
+<p>Email: josh at tristara dot com
 
 <ul class="horizontal">
 <li><a href="http://www.linkedin.com/profile/view?id=5878758&trk=tab_pro">LinkedIn</a></li>
