--- a/server/templates/fun_pics.html
+++ b/server/templates/fun_pics.html
@@ -18,7 +18,7 @@ Reddit Image Viewer
 
 {% block content %}    
 <div style="font-size: 14px;">
-<p>Browse through popular images posted to <a href="www.reddit.com">reddit</a>.
+<p>Browse through popular images posted to <a href="http://www.reddit.com">reddit</a>.
 <br>Also, you and a friend can synchronize your viewing experiences by both going to:
 
 <p style="text-align: center">http://www.tristara.com/fun_pics?channel={{channel}}</p>
