media flow with reddit example

--- a/web/css/style.css
+++ b/web/css/style.css
@@ -348,3 +348,16 @@ a.btn:hover {
   background: -webkit-gradient(linear,left top,left bottom,color-stop(0, #245192),color-stop(.75, #1e3b73),color-stop(1, #12295d));
   border: 1px solid #0f2557;
 }
+
+.popupDialogue {
+    -moz-border-radius: 6px;
+    background: #eef2f7;
+    -webkit-border-radius: 6px;
+    border: 1px solid #536376;
+    -webkit-box-shadow: rgba(0,0,0,.6) 0px 2px 12px;
+    -moz-box-shadow:  rgba(0,0,0,.6) 0px 2px 12px;;
+    padding: 14px 22px;
+    width: 920px;
+    position: relative;
+    display: none;
+}
